Give up on data maps and just hardcode the maps for the formula and built-in material systems.